[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/event_chain/editor/src/editor/gui/add_node_panel.gd" type="Script" id=1]


[sub_resource type="GDScript" id=1]
script/source = "tool
extends CheckBox


func _ready() -> void:
	if ProjectSettings.has_setting(EventChainGraphSettings.GROUP_NODES_BY_TYPE):
		pressed = ProjectSettings.get(EventChainGraphSettings.GROUP_NODES_BY_TYPE)
"

[node name="AddNodeDialog" type="WindowDialog"]
margin_right = 417.0
margin_bottom = 277.0
rect_min_size = Vector2( 512, 400 )
window_title = "Create a Graph Node"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
node_tree = NodePath("MarginContainer/VBoxContainer/NodeTree")
create_button = NodePath("MarginContainer/VBoxContainer/ActionContainer/CreateButton")
description_text = NodePath("MarginContainer/VBoxContainer/DescriptionText")
grouping_button = NodePath("MarginContainer/VBoxContainer/HBoxContainer/CheckBox")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 14
custom_constants/margin_top = 14
custom_constants/margin_left = 14
custom_constants/margin_bottom = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 14.0
margin_top = 14.0
margin_right = 498.0
margin_bottom = 386.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 484.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Search" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 362.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Search node"
caret_blink = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 366.0
margin_top = 5.0
margin_right = 456.0
margin_bottom = 19.0
text = "Group by type"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 460.0
margin_right = 484.0
margin_bottom = 24.0
script = SubResource( 1 )

[node name="NodeTree" type="Tree" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 484.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="DescriptionText" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 484.0
margin_bottom = 344.0
rect_min_size = Vector2( 0, 80 )
size_flags_vertical = 1
text = "Select a node from 
the list to see a description"
valign = 1
autowrap = true

[node name="ActionContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 348.0
margin_right = 484.0
margin_bottom = 372.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ActionContainer"]
margin_right = 54.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 2
text = "Cancel"

[node name="CreateButton" type="Button" parent="MarginContainer/VBoxContainer/ActionContainer"]
margin_left = 395.0
margin_right = 484.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
disabled = true
text = "Create node"
[connection signal="about_to_show" from="." to="." method="_on_dialog_about_to_show"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/Search" to="." method="_on_Search_text_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_grouping_type_changed"]
[connection signal="item_activated" from="MarginContainer/VBoxContainer/NodeTree" to="." method="_on_item_activated"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/NodeTree" to="." method="_on_item_selected"]
[connection signal="nothing_selected" from="MarginContainer/VBoxContainer/NodeTree" to="." method="_on_nothing_selected"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/ActionContainer/CancelButton" to="." method="_hide_panel"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/ActionContainer/CreateButton" to="." method="_on_item_activated"]
